@@ -152,6 +152,17 @@ module List :
 	  (** [List.fold_right f [a1; ...; an] b] is
 	      [f a1 (f a2 (... (f an b) ...))].  Tail-recursive. *)
 
+	val reduce : ('a -> 'a -> 'a) -> 'a list -> 'a
+	  (** [List.reduce f h::t] is [fold_left f h t].  Raises
+	      Invalid_argument on empty lists. *)
+
+	val max : 'a list -> 'a
+	  (** [max l] returns the largest value in [l] as judged by
+	      [Pervasives.compare] *)
+
+	val min : 'a list -> 'a
+	  (** [min l] returns the smallest value in [l] as judged by
+	      [Pervasives.compare] *)
 
 
 	(** {6 Iterators on two lists} *)
@@ -619,8 +630,6 @@ module ListLabels :
 	val fold_right : f:('a -> 'b -> 'b) -> 'a list -> init:'b -> 'b
 	  (** [List.fold_right ~f:f [a1; ...; an] ~init:b] is
 	      [f a1 (f a2 (... (f an b) ...))].  Tail-recursive. *)
-
-
 
 	(** {6 Iterators on two lists} *)
 
